--- a/displayWidget/package.json
+++ b/displayWidget/package.json
@@ -44,7 +44,9 @@
     "watch:nbextension": "webpack --watch"
   },
   "dependencies": {
-    "@jupyter-widgets/base": "^1.1.10 || ^2"
+    "@jupyter-widgets/base": "^1.1.10 || ^2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@phosphor/application": "^1.6.0",
@@ -52,6 +54,8 @@
     "@types/expect.js": "^0.3.29",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.6",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
     "@types/webpack-env": "^1.13.6",
     "css-loader": "^3.2.0",
     "expect.js": "^0.3.1",
@@ -62,8 +66,8 @@
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
-    "ts-loader": "^5.2.1",
-    "typescript": "~3.1.2",
+    "ts-loader": "^5.4.5",
+    "typescript": "^3.1.6",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
