--- a/displayWidget/tsconfig.json
+++ b/displayWidget/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["es2015", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
+    "noImplicitAny": true,
     "noEmitOnError": true,
     "noUnusedLocals": true,
     "outDir": "lib",
@@ -13,7 +14,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2015"
+    "target": "es6",
+    "jsx":"react"
   },
   "include": [
     "src/**/*.ts",
