--- a/displayWidget/package.json
+++ b/displayWidget/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.7.4",
     "@phosphor/application": "^1.6.0",
     "@phosphor/widgets": "^1.6.0",
     "@types/expect.js": "^0.3.29",
@@ -73,5 +74,9 @@
   },
   "jupyterlab": {
     "extension": "lib/plugin"
-  }
+  },
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ]
 }
